load-tests/setup/small_payload/kit-optimize-2-77/camunda-platform-helm/charts/camunda-platform-8.6/test/unit/web-modeler/golden/ingress.golden.yaml
---
# Source: camunda-platform/templates/web-modeler/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-platform-test-web-modeler
  labels:
    app: camunda-platform
    app.kubernetes.io/name: web-modeler
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: web-modeler
    app.kubernetes.io/version: "8.6.23"
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: modeler.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-platform-test-web-modeler-webapp
                port:
                  number: 80
    - host: modeler-ws.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-platform-test-web-modeler-websockets
                port:
                  number: 80
